# CM22007---Source

./: .gitignore  :w  CONTRIBUTING.md  Makefile  README.md  create-service.sh  create-setup-job.sh  create-subsystem.sh  package-lock.json  pylintrc
k8s/: example-service-2.yaml  rabbit-mq.yaml  (+7 more)
src/shared/: __init__.py  pyproject.toml
src/shared/models/: __init__.py  accounts.py  alerts.py  chat.py  food.py  image.py  profile.py  template.py
src/shared/rpcs/: __init__.py  add_alert_rpc.py  create-profile_rpc.py  create_chat_rpc.py  create_food_rpc.py  create_profile_rpc.py  delete_account_chats_rpc.py  delete_message_rpc.py  fetch_messages_rpc.py  login_rpc.py  ping.py  ping_rpc.py  register_rpc.py  send_message_rpc.py  suspend_account_rpc.py  test_rpc.py  update_food_rpc.py  view_alert_rpc.py  view_chats_rpc.py  view_food_rpc.py  view_profile_rpc.py
tests/: .dockerignore  copy-secret.sh  lib.py  main.py  print-logs.sh  pyproject.toml  test-job.yaml  test-result.sh  testing.yaml
tests/integration/accounts/: test_login_rpc.py  test_register_rpc.py  test_suspend_account_rpc.py
tests/integration/alerts/: test_add_alert.py  test_view_alert.py
tests/integration/chat/: test_create_chat_rpc.py  test_delete_account_chats_rpc.py  test_delete_message_rpc.py  test_fetch_messages_rpc.py  test_send_message_rpc.py  test_sendmessage_rpc.py  test_view_chats_rpc.py
tests/integration/food/: test_create_rpc.py  test_update_rpc.py  test_view_rpc.py
tests/integration/profile/: test_create_profile_rpc.py  test_view_profile_rpc.py
tests/integration/template/: test_ping_rpc.py
(+221 files in other folders)
