[project]
name = "shared"
version = "0.1.0"
description = "The shared library usable by all libraries to abstract away some boilerplate."
readme = "README.md"
authors = [
    { name = "peterc-s", email = "petercs@purelymail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pika>=1.3.2",
    "scylla-driver>=3.28.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
